--- a/TradingConsole.Wpf/Views/SettingsView.xaml
+++ b/TradingConsole.Wpf/Views/SettingsView.xaml
@@ -1,11 +1,12 @@
 ﻿<UserControl x:Class="TradingConsole.Wpf.Views.SettingsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TradingConsole.Wpf.Views"
              xmlns:viewmodels="clr-namespace:TradingConsole.Wpf.ViewModels"
-             mc:Ignorable="d"
+             xmlns:converters="clr-namespace:TradingConsole.Wpf.Converters"
+             mc:Ignorable="d" 
              d:DataContext="{d:DesignInstance Type=viewmodels:SettingsViewModel, IsDesignTimeCreatable=True}"
              d:DesignHeight="800" d:DesignWidth="1600">
     <UserControl.Resources>
@@ -39,6 +40,7 @@
                 </Trigger>
             </Style.Triggers>
         </Style>
+        <converters:BooleanToVisibilityConverter x:Key="BoolToVis"/>
     </UserControl.Resources>
     <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
         <StackPanel Margin="10">
@@ -162,12 +164,11 @@
                         </StackPanel>
                     </GroupBox>
                     <GroupBox Header="Notification Settings" MinWidth="400"
-          DataContext="{Binding DataContext, RelativeSource={RelativeSource AncestorType=UserControl}}">
+                              DataContext="{Binding DataContext, RelativeSource={RelativeSource AncestorType=UserControl}}">
                         <StackPanel>
                             <CheckBox Content="Enable Telegram Notifications"
-                  IsChecked="{Binding IsTelegramNotificationEnabled}"
-                  Margin="5,10"
-                  Foreground="White"/>
+                                      IsChecked="{Binding IsTelegramNotificationEnabled}"
+                                      Margin="5,10"/>
                             <TextBlock Text="Telegram Bot Token:" Margin="5,5,5,0"/>
                             <TextBox Text="{Binding TelegramBotToken, UpdateSourceTrigger=PropertyChanged}" Margin="5,0"/>
 
@@ -179,6 +180,58 @@
 
                 <!-- Middle Column (Column 1) -->
                 <StackPanel Grid.Column="1" VerticalAlignment="Top" Margin="10,0,0,0">
+                    <!-- Automation Settings -->
+                    <GroupBox Header="Trade Automation" MinWidth="550"
+                              DataContext="{Binding DataContext.AutomationSettings, RelativeSource={RelativeSource AncestorType=UserControl}}">
+                        <StackPanel>
+                            <CheckBox Content="Enable Trade Automation"
+                                      IsChecked="{Binding IsAutomationEnabled}"
+                                      FontWeight="Bold" FontSize="14" Margin="5,0,5,10"/>
+                            <TextBlock Text="WARNING: Enabling this will automatically place real orders based on signals. Use with extreme caution."
+                                       TextWrapping="Wrap" Margin="5,0,5,10" FontWeight="Normal" Foreground="DarkRed"/>
+
+                            <Grid IsEnabled="{Binding IsAutomationEnabled}">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                </Grid.RowDefinitions>
+
+                                <TextBlock Grid.Row="0" Grid.Column="0" Text="Trade Index:" Margin="5"/>
+                                <ComboBox Grid.Row="0" Grid.Column="1" Margin="5"
+                                          ItemsSource="{Binding AutoTradeableIndices}"
+                                          SelectedItem="{Binding SelectedAutoTradeIndex}"/>
+
+                                <TextBlock Grid.Row="1" Grid.Column="0" Text="Lots Per Trade:" Margin="5"/>
+                                <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding LotsPerTrade, UpdateSourceTrigger=PropertyChanged}"/>
+
+                                <TextBlock Grid.Row="2" Grid.Column="0" Text="Min. Conviction Score:" Margin="5"/>
+                                <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding MinConvictionScore, UpdateSourceTrigger=PropertyChanged}"/>
+
+                                <TextBlock Grid.Row="3" Grid.Column="0" Text="Stop Loss (Points):" Margin="5"/>
+                                <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding StopLossPoints, UpdateSourceTrigger=PropertyChanged}"/>
+
+                                <TextBlock Grid.Row="4" Grid.Column="0" Text="Target (Points):" Margin="5"/>
+                                <TextBox Grid.Row="4" Grid.Column="1" Text="{Binding TargetPoints, UpdateSourceTrigger=PropertyChanged}"/>
+
+                                <CheckBox Grid.Row="5" Grid.Column="1" IsChecked="{Binding IsTrailingEnabled}" Content="Use Trailing Stop Loss" Margin="5"/>
+
+                                <TextBlock Grid.Row="6" Grid.Column="0" Text="Trailing Jump (Points):" Margin="5"
+                                           Visibility="{Binding IsTrailingEnabled, Converter={StaticResource BoolToVis}}"/>
+                                <TextBox Grid.Row="6" Grid.Column="1" Text="{Binding TrailingStopLossJump, UpdateSourceTrigger=PropertyChanged}"
+                                         Visibility="{Binding IsTrailingEnabled, Converter={StaticResource BoolToVis}}"/>
+                            </Grid>
+                        </StackPanel>
+                    </GroupBox>
+
                     <GroupBox Header="Risk Management (Kill Switch)" MinWidth="550" DataContext="{Binding DataContext, RelativeSource={RelativeSource AncestorType=UserControl}}">
                         <StackPanel>
                             <TextBlock Text="Automatic Kill Switch" FontWeight="Bold" FontSize="14" Margin="5,0,5,10"/>
